# Hangman

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: Dictionary
includes/: Arena.cpp  Arena.h  Configuration.cpp  Configuration.h  Game.cpp  Game.h  Statistics.cpp  Statistics.h
sources/: Menu.cpp  Menu.h  Utils.cpp  Utils.h
